--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 requests==2.25.0
-streamlit==1.17.0
+streamlit==1.23.1
 nltk==3.5
-matplotlib==3.3.2
-pandas==1.4.4
-pypdf2==3.0.1
-python-docx==0.8.11
+matplotlib==3.7.0
+pandas==1.5.3
+numpy==1.23.5
 streamlit-on-hover-tabs==1.0.1
 openai==0.27.2
-opencv-python==4.7.0.72
+scikit_learn==1.2.2
+scipy==1.10.1
